--- a/front end/css/card.css
+++ b/front end/css/card.css
@@ -58,8 +58,8 @@
 }
 
 .golpeStatus.negado {
-    color: #95a5a6; 
-    background-color: #f2f2f2;
+    color: rgb(185, 60, 60); 
+    background-color: #f5adad;
 }
 
 
