--- a/front end/css/modal.css
+++ b/front end/css/modal.css
@@ -1,10 +1,12 @@
 
-#formCadastroGolpe label,
-#formCadastroGolpe input[type="text"],
-#formCadastroGolpe input[type="date"],
-#formCadastroGolpe input[type="url"],
-#formCadastroGolpe textarea,
-#formCadastroGolpe select {
+.form-modal label,
+.form-modal input[type="text"],
+.form-modal input[type="email"],
+.form-modal input[type="password"],
+.form-modal input[type="date"],
+.form-modal input[type="url"],
+.form-modal textarea,
+.form-modal select {
     display: block; 
     width: 100%;
     margin-bottom: 15px;
@@ -12,7 +14,7 @@
     box-sizing: border-box;
     border: 1px solid #cccccc49;
     border-radius: 4px;
-    resize:vertical; /*impedir que o textarea saia do modal*/
+    resize:vertical; 
 }
 
 
