--- a/front end/css/header.css
+++ b/front end/css/header.css
@@ -64,7 +64,7 @@ header .imgLogo {
     display: block;
 }
 
-.perfilOpcoes a{
+.perfilOpcoes a, .logo a {
     text-decoration: none;
     color: #333333;
     display: flex; 
@@ -77,6 +77,7 @@ header .imgLogo {
     background-color: #d9d9d96c;
     color: #FE820F ;
 }
+
 
 .perfilDeslogado {
     display: none;
